ggce/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ggce
  labels:
    istio-injection: enabled
