ggce/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: ggce
spec:
  selector:
    matchLabels:
      app: api
  replicas: 6
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: pdmm/ggce:23
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 256Mi
            cpu: 250m
          limits:
            memory: 1024Mi
            cpu: 1000m
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: ggce
spec:
  selector:
    matchLabels:
      app: db
  serviceName: db
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres
        ports:
          - containerPort: 5432
        resources:
          requests:
            memory: 256Mi
            cpu: 250m
          limits:
            memory: 1024Mi
            cpu: 1000m
