ggce/deployments.yml
# API
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: ggce
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: pdmm/ggce:31
        ports:
        - containerPort: 8888
        resources:
          requests:
            memory: 300Mi
            cpu: 300m
          limits:
            memory: 1024Mi
            cpu: 1000m
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: ggce
spec:
  selector:
    matchLabels:
      app: db
  serviceName: db
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres
        ports:
          - containerPort: 5432
        resources:
          requests:
            memory: 256Mi
            cpu: 250m
          limits:
            memory: 1024Mi
            cpu: 1000m
---
apiVersion: apps/v1
# See the Prerequisites section of https://www.rabbitmq.com/cluster-formation.html#peer-discovery-k8s.
kind: StatefulSet
metadata:
  name: rmq
  namespace: ggce
spec:
  serviceName: rmq
  # Three nodes is the recommended minimum. Some features may require a majority of nodes
  # to be available.
  replicas: 1
  selector:
    matchLabels:
      app: rmq
  template:
    metadata:
      labels:
        app: rmq
    spec:
      containers:
      - name: rmq
        image: rabbitmq:3.9
        volumeMounts:
          - name: config-volume
            mountPath: /etc/rabbitmq
        # Learn more about what ports various protocols use
        # at https://www.rabbitmq.com/networking.html#ports
        ports:
          - name: http
            protocol: TCP
            containerPort: 15672
          - name: amqp
            protocol: TCP
            containerPort: 5672
        # livenessProbe:
        #   exec:
        #     # This is just an example. There is no "one true health check" but rather
        #     # several rabbitmq-diagnostics commands that can be combined to form increasingly comprehensive
        #     # and intrusive health checks.
        #     # Learn more at https://www.rabbitmq.com/monitoring.html#health-checks.
        #     #
        #     # Stage 2 check:
        #     command: ["rabbitmq-diagnostics", "status"]
        #   initialDelaySeconds: 60
        #   # See https://www.rabbitmq.com/monitoring.html for monitoring frequency recommendations.
        #   periodSeconds: 60
        #   timeoutSeconds: 15
        # readinessProbe:
        #   exec:
        #     # This is just an example. There is no "one true health check" but rather
        #     # several rabbitmq-diagnostics commands that can be combined to form increasingly comprehensive
        #     # and intrusive health checks.
        #     # Learn more at https://www.rabbitmq.com/monitoring.html#health-checks.
        #     #
        #     # Stage 1 check:
        #     command: ["rabbitmq-diagnostics", "ping"]
        #   initialDelaySeconds: 20
        #   periodSeconds: 60
        #   timeoutSeconds: 10
        imagePullPolicy: Always
      volumes:
        - name: config-volume
          configMap:
            name: rabbitmq-config
            items:
            - key: rabbitmq.conf
              path: rabbitmq.conf
            - key: enabled_plugins
              path: enabled_plugins

# CONSUMER
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gac
  namespace: ggce
spec:
  selector:
    matchLabels:
      app: gac
  template:
    metadata:
      labels:
        app: gac
    spec:
      containers:
      - name: gac
        image: pdmm/gac:1
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 1000Mi
            cpu: 1000m
