ggce/db.yml
--- # deployment
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ggce-db
  namespace: ggce-ns
spec:
  selector:
    matchLabels:
      app: ggce-db
  serviceName: ggce-db
  replicas: 1
  template:
    metadata:
      labels:
        app: ggce-db
    spec:
      containers:
      - name: ggce-db
        image: postgres
        ports:
          - containerPort: 5432
--- # service
apiVersion: v1
kind: Service
metadata:
  name: ggce-db
  namespace: ggce-ns
spec:
  selector:
    app: ggce-db
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
