ggce/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: ggce
spec:
  selector:
    app: api
  ports:
    - port: 8888
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: ggce
spec:
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
