ggce/services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: ggce
spec:
  selector:
    app: api
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: ggce
spec:
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: rmq
  namespace: ggce
spec:
  selector:
    app: rmq
  ports:
   - name: http
     protocol: TCP
     port: 15672
     targetPort: 15672
   - name: amqp
     protocol: TCP
     port: 5672
     targetPort: 5672
