ggce/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ggce-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: ggce-ingress
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ggce-api
            port:
              number: 8888
