ggce/istio.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ggce-gateway
  namespace: ggce-ns
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8888
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ggce-vs
  namespace: ggce-ns
spec:
  hosts:
  - "*"
  gateways:
  - ggce-gateway
  http:
  - match:
    - uri:
        prefix: /
    # - uri:
    #     prefix: /delay
    route:
    - destination:
        port:
          number: 8888
        host: ggce-api
